@@ -25,7 +25,7 @@
 .\" THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 .\" OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
-.Dd July 28, 2014
+.Dd September 21, 2014
 .Dt KYUA-REPORT 1
 .Os
 .Sh NAME
@@ -36,7 +36,7 @@
 .Op Fl -output Ar path
 .Op Fl -results-file Ar file
 .Op Fl -results-filter Ar types
-.Op Fl -show-context
+.Op Fl -verbose
 .Sh DESCRIPTION
 The
 .Nm
@@ -82,8 +82,11 @@ and all result types are shown in the report.
 The default value for this flag includes all the test results except the
 passed tests.  Showing the passed tests by default clutters the report with
 too much information, so only abnormal conditions are included.
-.It Fl -show-context
-Prints the runtime context of the test suite run.
+.It Fl -verbose
+Prints a detailed report of the execution.  In addition to all the
+information printed by default, verbose reports include the runtime context
+of the test suite run, the metadata of each test case, and the verbatim
+output of the test cases.
 .El
 .Sh EXIT STATUS
 The
